<resources>
    <string name="app_name">第二教室</string>
    <string name="main_title">第二教室</string>
    <string name="settings_title">设置</string>
    <string name="exit_title">退出</string>
    <string name="exit_message">确定要退出应用吗？\n双击退出键可直接退出应用。</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="welcome_title">欢迎</string>
    <string name="loading">正在获取最新内容…</string>
    <string name="header_refresh">获取最新内容</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="action">播放</string>
	<string name="media_date">00月00日</string>
    <string name="media_title">音频或者视频内容的标题不限长度</string>
    <string name="media_length">1.00MB 4分60秒</string>
    <string name="downloadable">可下载</string>
    <string name="downloading">下载中…0%</string>
    <string name="downloaded">已下载</string>
    <string name="space">　</string>
    <string name="usetraffic">允许2G/3G流量下载内容</string>
    <string name="usetraffic_description">选项打开时，有可能产生网络流量费用，建议2G和3G流量有限的同学关闭此选项。</string>
    <string name="autodownload">自动下载内容</string>
    <string name="autodownload_description">选项打开时，自动下载内容保证播放流畅，建议2G和3G流量有限的同学关闭此选项。</string>
    <string name="autodelete">自动删除一周以前的缓存</string>
    <string name="autodelete_description">选项关闭时，将自动缓存一个月的内容，建议手机空间有限的同学打开此选项。</string>
    <string name="time_played">00:00</string>
    <string name="time_rest">-00:00</string>
    <string name="hint_title">上次\n播放</string>
    <string name="hint_name">上次播放的内容的相应标题</string>
    <string name="hint_info">已播放：00分00秒</string>
    <string name="hint_resume">继续播放</string>
</resources>