<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_mediatitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:marqueeRepeatLimit="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:singleLine="true"
        android:text="@string/media_title"
        android:textColor="#333"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/item_mediaaction"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:contentDescription="@string/action"
            android:gravity="right"
            android:paddingTop="6dp"
            android:src="@drawable/audio" />

        <TextView
            android:id="@+id/item_medialength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/item_mediaaction"
            android:text="@string/media_length"
            android:textColor="#666"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/item_mediastatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_medialength"
            android:layout_toLeftOf="@id/item_mediaaction"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:background="#999" />

</LinearLayout>