<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="top"
    android:background="@drawable/title_bar"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="92dp"
        android:contentDescription="@string/main_title"
        android:scaleType="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/header_text"
        android:layout_width="180dp"
        android:layout_height="92dp"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:text="@string/main_title"
            android:textColor="#fff"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/header_info"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/header_status"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:paddingTop="8dp"
                android:text="@string/header_refresh"
                android:textColor="#36c"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/header_loading"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@string/header_refresh"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/header_refresh" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/header_setting"
        android:layout_width="32dp"
        android:layout_height="52dp"
        android:clickable="true"
        android:contentDescription="@string/settings_title"
        android:paddingTop="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/setting" />

</LinearLayout>