<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@drawable/title_bar"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/header_logo"
        android:layout_width="80dp"
        android:layout_height="92dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/main_title"
        android:scaleType="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:layout_toRightOf="@id/header_logo" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:text="@string/main_title"
            android:textColor="#fff"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/panel_refresh"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/header_status"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingTop="8dp"
                android:text="@string/header_refresh"
                android:textColor="#36c"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/header_loading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/header_refresh"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/header_refresh" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/header_setting"
        android:layout_width="32dp"
        android:layout_height="52dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:contentDescription="@string/settings_title"
        android:paddingTop="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/setting" />

</RelativeLayout>