<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/videoplayer_window"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical" >

        <VideoView
            android:id="@+id/video_surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_toppanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_video_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@drawable/btn_back"
            android:contentDescription="@string/video"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_bottompanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#6000"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/video_control"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/btn_play"
            android:contentDescription="@string/video"
            android:scaleType="fitCenter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:orientation="vertical" >

                <ProgressBar
                    android:id="@+id/video_seekbar"
                    style="@style/SeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:minWidth="4dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/video_name"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:ellipsize="marquee"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:text="@string/video"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/video_timerplayed"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/time_played"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/video_timerrest"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/time_rest"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>